# maxwell-protocol-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
protocol-generator/: Cargo.toml
protocol-generator/src/: main.rs
src/protocol/: maxwell_protocol.rs  maxwell_protocol_ext.rs  mod.rs
