[package]
name = "maxwell-protocol"
version = "0.24.3"
description = "Maxwell protocol implementation for Rust."
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/maxwell-dev/maxwell"
keywords = ["maxwell", "data-exchange", "msg-communication"]
exclude = ["/protocol-generator", ".vscode", "target", "Cargo.lock"]
edition = "2021"
rust-version = "1.75"


[dependencies]
actix = "0.13.5"
bytes = "1.7.1"
prost = "0.13.2"
thiserror = "1.0.63"